Première conception du squelette HTML

--- a/index.html
+++ b/index.html
@@ -5,8 +5,33 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>POMODORO TIMER</title>
 
+	<header></header>
+
 	<h1>This is a simple title!</h1>
-	<p>This is just a paragraph!</p>
+	<p id="demo">This is just a paragraph!</p>
+
+	<button onclick="setTimeout(myFunction, 500)">START</button>
+	<button onclick="setTimeout(myFunction, 500)">PAUSE</button>
+	<button onclick="setTimeout(myFunction, 500)">RESET</button>
+
+	<footer>
+		<p>Author: Ismail The ReadTeamer</p>
+		<p>HOME</p>
+		<p>PRIVACY</p>
+		<p>CONTACT</p>
+		<p>SIMPLE PAGE</p>
+		<a href="#">Facebook Logo</a>
+		<a href="#">Instagram Logo</a>
+		<a href="#">GitHub Logo</a>
+		<a href="#">LinkedIn</a>
+		<a href="#">WhatsApp</a>
+		<a href="#">SnapChat</a>
+		<a href="#">Twitter</a>
+	</footer>
+
+	<script src="site_functions.js" type="text/javascript"></script>
+
+	<!-- vérifier ce site par W3C: https://validator.w3.org -->
 
 </head>
 <body>
